--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,11 @@ jsonwebtoken = "8.3.0"
 rand = "0.8.5"
 serde = "1.0.159"
 serde_json = "1.0.95"
-sqlx = { version = "0.6.3", features = ["sqlite", "runtime-tokio-native-tls", "time", "chrono"] }
+sqlx = { version = "0.6.3", features = [
+    "sqlite",
+    "runtime-tokio-native-tls",
+    "chrono",
+] }
 time = "0.3.20"
 tokio = { version = "1.27.0", features = ["full"] }
 
