--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ sqlx = { version = "0.6.3", features = [
 ] }
 time = "0.3.20"
 tokio = { version = "1.27.0", features = ["full"] }
+tower-http = { version = "0.4.0", features = ["cors"] }
 
 [dev-dependencies]
 reqwest = { version = "0.11.16", features = ["json"] }
